--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,7 +4,16 @@
 
 @tailwind utilities;
 
+// React Diagrams must have explicit width and height
 .fullsize {
     width: 100vw;
     height: 70vh;
+}
+
+// Fixes link labels
+foreignObject > div > div{
+    background-color: transparent !important;
+    padding: 0px !important;
+    position:absolute  !important;
+    top:3px !important;
 }
