--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,13 @@ foreignObject > div > div{
     position:absolute  !important;
     top:3px !important;
 }
+
+.Toastify__toast-body {
+    background: #E5E7EB;
+    font-family: monospace;
+    color: #4499AF;
+
+}
+.Toastify__toast {
+    background: #E5E7EB !important;
+}
